# language-learning-method

./: .gitignore  .gitmodules  README.md  cli.sh  parse-pdf.sh  pyproject.toml  start-pdf-extract-api.sh
src/: app.py  enums.py  error.py  model.py  service_factory.py  settings.py
src/app/: __init__.py  book.py  config.py  main.py
src/service/: config_manager.py  deck_from_prompt_service.py  deck_service.py  exercise_builder_service.py  exercise_extraction_service.py  llm_service.py  pdf_parser.py  pdf_splitter.py  persitence_service.py  text_extraction_service.py
