[project]
name = "learning-language"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain-openai>=0.2.11",
    "langchain>=0.3.10",
    "loguru>=0.7.3",
    "openai>=1.57.0",
    "pypdf2>=3.0.1",
    "requests>=2.32.3",
    "langchain-ollama>=0.2.1",
    "pydantic-settings>=2.6.1",
    "typer>=0.15.1",
    "appdirs>=1.4.4",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
]
